
plugins {
    id 'application'
}

sourceCompatibility = 17
targetCompatibility = 17

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        url = uri('https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1')
    }
}

dependencies {
    testImplementation 'com.github.hmcts:fortify-client:1.4.9:all'
    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.4'
}

task fortifyScan(type: JavaExec)  {
    main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
    classpath += sourceSets.test.runtimeClasspath
    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
}
